# hattax

./: .clang-format  CMakeLists.txt
hattax/: CMakeLists.txt  config.hpp.in
hattax_testing/: CMakeLists.txt  easy_test.cpp
scripts/: check-format.sh
